avancement de la page referencement

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -1,11 +1,11 @@
 {% extends "layout.html.twig" %}
 
-{% block content %} 
+{% block content %}
 	<div class="container agilite" data-page="agilite">
 		<header class="landing landing-agilite {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div class="row">
 				<div class="large-9 columns">
-					<h1>Notre ADN : la culture Agile <span></span><i class="icon-arrow-down4"> </i></h1>
+					<h1>Notre ADN : la culture Agile <span></span><i class="icon-keyboard_arrow_down"> </i></h1>
 					<p>Pour nous, <strong>l’agilité</strong> ne se limite pas à une méthodologie de gestion de projet. C’est <strong>notre philosophie</strong>.
 Alliée aux principes de <strong>l'amélioration continue</strong> elle nous permet d'apporter <strong>transparence</strong>, <strong>qualité</strong> et <strong>satisfaction à nos clients.</strong></p>
 				</div>
@@ -14,7 +14,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 		<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}">
 				{#<div class="row">
 					<div class="medium-4 columns intro-picto">
-						<a class="agilitypage losange show-for-large-up"><i class="icon-arrow-down4 losange-arrow"> </i></a>
+						<a class="agilitypage losange show-for-large-up"><i class="icon-keyboard_arrow_down losange-arrow"> </i></a>
 					</div>
 					<div class="medium-8 columns intro-content">
 						<p>Notre démarche itérative vous permet d’avoir une visibilité totale sur votre projet à tout moment, elle est également garante de votre satisfaction : plus d’effet tunnel, vous ne découvrez pas votre solution au terme de son développement, vous accompagnez sa création et constatez nos avancées à chaque itération.</p>
@@ -28,7 +28,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 				</div>#}
 		</section>
 		<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
-			
+
 			<article>
 				<div class="row">
 					<div class="medium-6 columns large-push-6">
@@ -71,10 +71,10 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 					<a data-pos="1" data-scroll="0" href="/" data-page-title="Home" class="buttonIE valeurIE enabled"><span data-hover="Retour">Retour</span></a>
 					{% else %}
 					<a data-pos="1" data-scroll="0" href="/" data-page-title="Home" class="button-back enabled show-for-medium-up">
-						<i class="icon-chevron-right"></i>
+						<i class="icon-keyboard_arrow_right"></i>
 					</a>
 					{% endif %}
-				</div>	
+				</div>
 			</article>
 
 			<article>
@@ -114,14 +114,14 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 					<a data-pos="1" data-scroll="1" href="/" data-page-title="Home" class="buttonIE risquesIE enabled"><span data-hover="Retour">Retour</span></a>
 					{% else %}
 					<a data-pos="1" data-scroll="1" href="/" data-page-title="Home" class="button-back enabled risques show-for-medium-up">
-						<i class="icon-chevron-right"></i>
-					</a>				
+						<i class="icon-keyboard_arrow_right"></i>
+					</a>
 					{% endif %}
-				</div>	
+				</div>
 			</article>
 
 			<article>
-				<div class="row">	
+				<div class="row">
 					<div class="medium-6 large-push-6 columns">
 						<h2>Adaptabilité</h2>
 						<p>Les méthodes de gestion de projet traditionnelles tolèrent peu le changement en cours de développement. Nous savons que votre besoin peut évoluer à tout moment, c’est pourquoi nous concevons et développons des fonctionnalités interopérables.</p>
@@ -145,10 +145,10 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 					</div>
 				</div>
 			</article>
-			
+
 			<article>
 				<div class="row">
-					
+
 
 					<div class="medium-6 columns">
 						<h2>Visibilité</h2>
@@ -175,7 +175,7 @@ Alliée aux principes de <strong>l'amélioration continue</strong> elle nous per
 							</ul>
 						</div>
 					</div>
-				
+
 				</div>
 			</article>
 
