--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -10,7 +10,7 @@
 							<!-- <svg x="0px" y="0px" id="KILIX-logo" viewBox="0 0 1500 200"></svg> -->
 					</div>
 					<h1 class='landing-main-text'>
-						Nous sommes une agence Web avec des post-it<sup>®</sup> sur les murs.<i class="icon-arrow-down4"> </i>
+						Nous sommes une agence Web avec des post-it<sup>®</sup> sur les murs.<i class="icon-keyboard_arrow_down"> </i>
 					</h1>
 				</div>
 
@@ -19,7 +19,7 @@
 		<section class="intro  {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div class="row">
 				<div class="medium-4 columns intro-picto">
-					<a class="homepage losange show-for-large-up"><i class="icon-arrow-down4 losange-arrow"> </i></a>
+					<a class="homepage losange show-for-large-up"><i class="icon-keyboard_arrow_down losange-arrow"> </i></a>
 				</div>
 				<article class="medium-8 columns intro-content">
 					<h2>L’agence digitale Agile by EXTIA</h2>
@@ -63,11 +63,11 @@
 						{% endif %}
 					{% else %}
 						<svg id="VALEUR-dispatch" x="0px" y="0px" viewBox="0 0 1400 700"></svg>
-					{% endif %}					
+					{% endif %}
 				</div>
 
 				<a class='next-section'>
-					<i class="icon-arrow-down4"> </i>
+					<i class="icon-keyboard_arrow_down"> </i>
 				</a>
 			</div>
 		</section>
@@ -96,17 +96,17 @@
 						<svg id="RISK-dispatch" x="0px" y="0px" viewBox="600 100 800 600">
     					</svg>
 					{% endif %}
-					
+
 				</div>
 				<a class='next-section'>
-					<i class="icon-arrow-down4"> </i>
+					<i class="icon-keyboard_arrow_down"> </i>
 				</a>
 			</div>
 		</section>
 		<section class="svg-anim ❤ svg-amelio" data-color="col3" data-title="Amélioration continue">
 			<div class="row">
 				<a class='next-section'>
-					<i class="icon-arrow-down4"> </i>
+					<i class="icon-keyboard_arrow_down"> </i>
 				</a>
 				<div class="large-6 medium-6 columns anim-content scroll-item">
 					<h2><span>Amélioration</span><span> continue</span></h2>
@@ -139,7 +139,7 @@
 						<p class='logo'>
 							<img src="/assets/img/extia-logo.png" alt="Logo Extia">
 						</p>
-						
+
 					</h2>
 					<h3>Boostez vos projets grâce à l'énergie d’Extia</h3>
 					<p>Nous nous appuyons sur l'expertise d’Extia, acteur reconnu du conseil depuis 7 ans, qui met à votre disposition ses meilleurs consultants et vous garantit l'atteinte de vos objectifs dans les délais impartis.</p>
