--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -8,8 +8,8 @@
 	<meta property="og:image" content="http://kilix.fr/assets/img/logo_x.png" />
 	<meta name="description" content="{{description}}" />
 	<link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" media="all"/>
-	<script src="/assets/js/vendor/modernizr-custom.js"></script>
-	<!--[if IE 9]><script src='assets/js/matchMedia.min.js'><![endif]-->
+  <script src="/assets/js/vendor/modernizr-custom.js"></script>
+  <!--[if IE 9]><script src='assets/js/matchMedia.min.js'><![endif]-->
   		<!--[if lt IE 9]>
             <script>
                 window.location.href('how-about-no');
@@ -53,7 +53,7 @@
             </script>
           </head>
           <body>
-            <a class='back-to-top' href="#" title="Back to top"><i class="icon-arrow-up"></i></a>
+            <a class='back-to-top' href="#" title="Back to top"><i class="icon-keyboard_arrow_up"></i></a>
             <header class="navbar navbar-top">
               <div class="row">
                <i class="toggle-menu show-for-small-only">
