--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -5,7 +5,7 @@
 	<header class="landing landing-references {% if ress.isMobile ==  false %}desktop{% endif %}">
 		<div class="row">
 			<div class="large-9 columns">
-				<h1>Nos références <span></span><i class="icon-arrow-down4"> </i></h1>
+				<h1>Nos références <span></span><i class="icon-keyboard_arrow_down"> </i></h1>
 				<p>Pour nous, <strong>l’agilité</strong> ne se limite pas à une méthodologie de gestion de projet. C’est <strong>notre philosophie</strong>.
 					Alliée aux principes de <strong>l'amélioration continue</strong> elle nous permet d'apporter <strong>transparence</strong>, <strong>qualité</strong> et <strong>satisfaction à nos clients.</strong></p>
 				</div>
@@ -13,48 +13,50 @@
 		</header>
 		<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}"></section>
 		<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
-			<div class="ref">
+			<div id="amnesty" class="ref">
 				<div class="pictures">
-					<i class="icon-chevron-right"></i>
-					<img src="/assets/img/amnesty_logo.png" alt="" id="logo_amnesty">
-					<img src="/assets/img/amnesty-maquette.jpg" alt="" id="maquette_amnesty">
+					<img class="logo-ref svg" src="/assets/img/svg/amnesty-logo-black.svg" alt="logo amnesty" id="logo_amnesty">
+					<img src="/assets/img/amnesty-iphone.png" alt="maquette amnesty" id="maquette_amnesty">
+					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
+					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
 				</div>
-				<div class="left-mask"></div>
 				<div class="right-mask">
 					<div class="infos">
-						<h3>Refonte complète du site</h3>
-						<h4>Amnesty France</h4>
+						<h3>Refonte complète du site Amnesty.fr</h3>
+						<h4>Amnesty Internationnal France</h4>
 						<h5>Réalisation en cours</h5>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							cillum dolore eu fugiat nulla pariatur. <br>
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
 						</p>
 					</div>
 				</div>
 			</div>
-			<div class="ref">
+			<div id="vamos" class="ref">
 				<div class="pictures">
-					<i class="icon-chevron-right"></i>
-					<img src="/assets/img/amnesty_logo.png" alt="" id="logo_amnesty">
-					<img src="/assets/img/amnesty-maquette.jpg" alt="" id="maquette_amnesty">
+					<img class="logo-ref svg" src="/assets/img/svg/w_logo_vamos.svg" alt="logo Vamos" id="logo_vamos">
+					<img src="/assets/img/amnesty-iphone.png" alt="maquette amnesty" id="maquette_amnesty">
+					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
+					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
 				</div>
-				<div class="left-mask"></div>
 				<div class="right-mask">
 					<div class="infos">
-						<h3>Refonte complète du site</h3>
-						<h4>Amnesty France</h4>
+						<h3>Création du CRM d'Extia</h3>
+						<h4>Extia</h4>
 						<h5>Réalisation en cours</h5>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							cillum dolore eu fugiat nulla pariatur. <br>
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
 						</p>
 					</div>
 				</div>
