--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -5,7 +5,7 @@
 		<header class="landing landing-team {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div class="row">
 				<div class="large-8 columns">
-					<h1>Vous et Nous <span></span><i class="icon-arrow-down4"> </i></h1>
+					<h1>Vous et Nous <span></span><i class="icon-keyboard_arrow_down"> </i></h1>
 					<p>L’équipe Kilix est composée d’experts reconnus qui interviennent avec VOUS sur l’ensemble du projet.</p>
 				</div>
 			</div>
@@ -13,7 +13,7 @@
 		<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}">
 				<div class="row">
 					<div class="medium-4 columns intro-picto">
-						<a class="teampage losange show-for-large-up"><i class="icon-arrow-down4 losange-arrow"> </i></a>
+						<a class="teampage losange show-for-large-up"><i class="icon-keyboard_arrow_down losange-arrow"> </i></a>
 					</div>
 					<article class="medium-8 columns intro-content">
 						<h2>Vous...</h2>
