avancement references, passage des animation en Js avec velocity pour une meilleure gestion

--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -13,55 +13,173 @@
 		</header>
 		<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}"></section>
 		<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
-			<div id="amnesty" class="ref">
-				<div class="pictures">
-					<img class="logo-ref svg" src="/assets/img/svg/amnesty-logo-black.svg" alt="logo amnesty" id="logo_amnesty">
-					<img src="/assets/img/amnesty-iphone.png" alt="maquette amnesty" id="maquette_amnesty">
+			<div id="vamos" class="large ref">
+				<div class="pictures" data-target='vamos'>
+					<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="logo Vamos">
+					<img class="maquette-ref" src="/assets/img/references/fiche-contact2.png" alt="maquette vamos">
+					<!--
 					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
-				</div>
-				<div class="right-mask">
-					<div class="infos">
-						<h3>Refonte complète du site Amnesty.fr</h3>
-						<h4>Amnesty Internationnal France</h4>
-						<h5>Réalisation en cours</h5>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. <br>
+				-->
+			</div>
+			<div class="right-mask">
+				<div class="infos">
+					<h3>Développement du CRM d'Extia</h3>
+					<h4>Extia</h4>
+					<h5>Réalisation en cours</h5>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. <br>
+							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
-						</p>
-					</div>
+						-->
+					</p>
 				</div>
 			</div>
-			<div id="vamos" class="ref">
-				<div class="pictures">
-					<img class="logo-ref svg" src="/assets/img/svg/w_logo_vamos.svg" alt="logo Vamos" id="logo_vamos">
-					<img src="/assets/img/amnesty-iphone.png" alt="maquette amnesty" id="maquette_amnesty">
+		</div>
+		<div id="amnesty" class="ref">
+			<div class="pictures" data-target='amnesty'>
+				<img class="logo-ref svg" src="/assets/img/references/amnesty-logo-black.svg" alt="logo amnesty">
+				<img class="maquette-ref" src="/assets/img/references/amnesty-iphone.png" alt="maquette amnesty">
+					<!--
 					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
-				</div>
-				<div class="right-mask">
-					<div class="infos">
-						<h3>Création du CRM d'Extia</h3>
-						<h4>Extia</h4>
-						<h5>Réalisation en cours</h5>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. <br>
+				-->
+			</div>
+			<div class="right-mask">
+				<div class="infos">
+					<h3>RRefonte de la Home mobile de Amnesty.fr</h3>
+					<h4>Amnesty Internationnal France</h4>
+					<h5>Projet pilote avant refonte complète du site</h5>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. <br>
+							<!--
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
 							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
-						</p>
-					</div>
+						-->
+					</p>
 				</div>
 			</div>
-		</section>
-		{#{% include "contact-footer.html.twig" %}#}
-	</div>
-	{% endblock %}
+		</div>
+		<div id="horizon" class="large ref">
+			<div class="pictures" data-target='horizon'>
+				<img class="logo-ref svg" src="/assets/img/references/horizon-logo.svg" alt="Logo COP 21">
+				<img class="maquette-ref" src="/assets/img/references/horizon-home.png" alt="Maquette Horizon">
+				<a href="http://cop21horizon.com/fr/" target="_blank" class="ref-btn link-ref"><i class="icon-link"></i></a>
+					<!--
+					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
+				-->
+			</div>
+			<div class="right-mask">
+				<div class="infos">
+					<h3>Développement du site Horizon</h3>
+					<h4>Ecole polytechnique de Lausanne</h4>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. <br>
+							<!--
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+						-->
+						<a href="http://cop21horizon.com/fr/" target="_blank" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
+					</p>
+				</div>
+			</div>
+		</div>
+		<div id="FFB-public" class="large ref">
+			<div class="pictures" data-target='FFB-public'>
+				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="logo FFB">
+				<img class="maquette-ref" src="/assets/img/references/ffb-public-home.png" alt="maquette FFB public">
+					<!--
+					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
+					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
+				-->
+			</div>
+			<div class="right-mask">
+				<div class="infos">
+					<h3>Refonte du site public de la FFB</h3>
+					<h4>Fédération Française de Bridge</h4>
+					<h5>Réalisation en cours</h5>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. <br>
+							<!--
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
+						-->
+					</p>
+				</div>
+			</div>
+		</div>
+		<div id="FFB" class="large ref">
+			<div class="pictures" data-target='FFB'>
+				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="logo FFB">
+				<img class="maquette-ref" src="/assets/img/references/ffb-member-fiche.png" alt="maquette FFB">
+					<!--
+					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
+					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
+				-->
+			</div>
+			<div class="right-mask">
+				<div class="infos">
+					<h3>Développement des espaces connectés de la FFB</h3>
+					<h4>Fédération Française de Bridge</h4>
+					<h5>Réalisation en cours</h5>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. <br>
+							<!--
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
+						-->
+					</p>
+				</div>
+			</div>
+		</div>
+		<div id="michelin" class="large ref">
+			<div class="pictures" data-target='michelin'>
+				<img class="logo-ref svg" src="/assets/img/references/logo-michelin.svg" alt="Logo Michelin">
+				<img class="maquette-ref" src="/assets/img/references/michelin-home.png" alt="Maquette Michelin">
+				<a href="http://simgm.michelin.fr/fr/" target="_blank" class="ref-btn link-ref"><i class="icon-link"></i></a>
+					<!--
+					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
+				-->
+			</div>
+			<div class="right-mask">
+				<div class="infos">
+					<h3>Développement du site de personalisation du guide Michelin</h3>
+					<h4>Michelin</h4>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur.<br>
+							<!--
+							<a href="#" class="ref-btn-mobile button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+						-->
+						<a href="http://simgm.michelin.fr/fr/" target="_blank" class="ref-btn-mobile button enabled"><span data-hover="Link">Link</span></a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	{#{% include "contact-footer.html.twig" %}#}
+</div>
+{% endblock %}
